--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,15 @@
             <artifactId>craftbukkit</artifactId>
             <version>1.4.5-R0.1</version>
         </dependency>
+        <dependency>
+        	<groupId>com.sk89q</groupId>
+        	<artifactId>worldguard</artifactId>
+        	<version>5.6.6-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>com.palmergames.bukkit.towny</groupId>
+        	<artifactId>Towny</artifactId>
+        	<version>0.82.0.2</version>
+        </dependency>
     </dependencies>
 </project>
