--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.4.6-R0.1</version>
+            <version>1.6.1-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
         	<groupId>com.sk89q</groupId>
