--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Shopkeepers
-version: 1.9
+version: 1.14.1
 description: Custom villager shopkeepers
 author: nisovin
 website: http://dev.bukkit.org/server-mods/shopkeepers/
@@ -15,6 +15,13 @@ permissions:
     shopkeeper.reload:
         description: Reloads the plugin
         default: op
+    shopkeeper.bypass:
+        description: Bypass player shop restrictions
+        default: op
+    shopkeeper.purchase:
+        description: Purchase items from any shopkeeper
+        default: true
+        
     shopkeeper.admin:
         description: Create and modify an admin shopkeeper
         default: op
@@ -38,6 +45,13 @@ permissions:
     shopkeeper.player.trade:
         description: Create and modify a trading player shopkeeper
         default: true
-    shopkeeper.bypass:
-        description: Bypass player shop restrictions
-        default: op
+        
+    shopkeeper.villager:
+        description: Create a villager shopkeeper
+        default: true
+    shopkeeper.sign:
+        description: Create a sign shopkeeper
+        default: true
+    shopkeeper.witch:
+        description: Create a witch shopkeeper
+        default: true
