update to latest dev build (CB 1.6.4)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,7 +3,7 @@ block-villager-spawns: false
 enable-spawn-verifier: false
 enable-purchase-logging: false
 save-instantly: true
-file-encoding: ""
+file-encoding: "UTF-8"
 
 enable-world-guard-restrictions: false
 enable-towny-restrictions: false
@@ -14,27 +14,38 @@ require-chest-recently-placed: true
 protect-chests: true
 delete-shopkeeper-on-break-chest: false
 max-shops-per-player: 0
+max-shops-perm-options: 5,15,25
 max-chest-distance: 15
 player-shopkeeper-inactive-days: 0
 prevent-trading-with-own-shop: true
 
+tax-rate: 0
+tax-round-up: false
+
 shop-creation-item: 383
 shop-creation-item-data: 120
 shop-creation-item-name: ""
+prevent-shop-creation-item-regular-usage: false
 deleting-player-shop-returns-egg: false
 
 enable-villager-shops: true
 enable-sign-shops: true
 enable-witch-shops: true
+enable-creeper-shops: false
 
 sign-shop-first-line: "[SHOP]"
 show-nameplates: true
 always-show-nameplates: false
 nameplate-prefix: "&a"
+name-regex: "[A-Za-z0-9 ]{3,25}"
 
 editor-title: "Shopkeeper Editor"
 name-item: 145
 delete-item: 51
+
+hire-item: 388
+hire-item-text: "&aHire This Shopkeeper"
+for-hire-title: "For Hire"
 
 currency-item: 388
 currency-item-data: 0
@@ -51,6 +62,7 @@ language: en
 msg-button-name: "&aSet Shop Name"
 msg-button-type: "&aChoose Appearance"
 msg-button-delete: "&4Delete"
+msg-button-hire: "&aHire"
 
 msg-selected-normal-shop: "&aNormal shopkeeper selected (sells items to players)."
 msg-selected-book-shop: "&aBook shopkeeper selected (sell books)."
@@ -60,6 +72,7 @@ msg-selected-trade-shop: "&aTrading shopkeeper selected (trades items with playe
 msg-selected-villager-shop: "&aVillager shop selected."
 msg-selected-sign-shop: "&aSign shop selected."
 msg-selected-witch-shop: "&aWitch shop selected."
+msg-selected-creeper-shop: "&aCreeper shop selected."
 
 msg-selected-chest: "&aChest selected! Right click a block to place your shopkeeper."
 msg-must-select-chest: "&aYou must right-click a chest before placing your shopkeeper."
@@ -69,6 +82,10 @@ msg-shop-create-fail: "&aYou cannot create a shopkeeper there."
 msg-too-many-shops: "&aYou have too many shops."
 msg-type-new-name: "&aPlease type the shop's name into the chat.\n  &aType a dash (-) to remove the name."
 msg-name-set: "&aThe shop's name has been set!"
+msg-name-invalid: "&aThat name is not valid!"
+
+msg-hired: "&aYou have hired this shopkeeper!"
+msg-cant-hire: "&aYou cannot afford to hire this shopkeeper."
 
 msg-player-shop-created: |
     &aShopkeeper created!
